[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Card/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/m6x11.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Points" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost1" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost3" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost4" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}
